# projectBro

./: .gitignore  CMakeLists.txt  main.c++  main.cxx
debug/: CMakeCache.txt  cmake_install.cmake  websocket.cbp
lib/session_manager/: Cargo.toml  README.md
lib/session_manager/src/: main.rs
lib/session_manager/src/session/: filesaver.rs  handlers.rs  message.rs  mod.rs
src/: globals.hxx  handler.h  signal_handlers.c++  signal_handlers.hpp
src/server/: Cookie.cxx  Cookie.hxx  EventBase.cxx  EventBase.hxx  HttpEvent.cxx  HttpEvent.hxx  Middleware.cxx  Middleware.hxx  Request.cxx  Request.hxx  RequestHandler.cxx  RequestHandler.hxx  Server.cxx  Server.hxx  server.c++  server.cxx  server.hpp  server.hxx
src/server/common/: common.cxx  common.hxx
src/server/handlers/: MainHandler.cxx  MainHandler.hxx  StaticHandler.cxx  StaticHandler.hxx
src/websocket/: Storage.cxx  Storage.hxx  Websocket.cxx  Websocket.hxx
web/css/: style.css
web/html/: index.html
web/js/: browser.js
